--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Profile</title>
-    <!-- <link rel="stylesheet" href="./css/stylesbak.css"></link> -->
+    <title>Annie Profile</title>
+    <link rel="stylesheet" href="./css/styles.css"></link>
   </head>
 
   <body>
     <header>
       <figure class="headshot">
-        <img src="./images/mypic.png" class="mypic" alt="mypicture" />
+        <img src="./images/anniepic.jpg" class="mypic" alt="anniepicture" />
       </figure>
       <img src="images/banner.png" alt="banner" />
       <nav>
